[GStreamer] Fix webrtc/utf8-sdp.html regression https://bugs.webkit.org/show_bug.cgi?id=283104

Reviewed by Philippe Normand.

getStreamIdFromStream() would sometimes returned nullopt in updateTracks(), fixed by providing a fallback value

* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::updateTracks):

Canonical link: https://commits.webkit.org/286598@main